made footer more mobile-friendly, fixed nav spacing

--- a/shoppe/src/App.css
+++ b/shoppe/src/App.css
@@ -11,7 +11,7 @@
   height: 5.5rem;
 }
 
-@media (max-width:1100px) {
+@media (max-width:900px) {
   .App {
     border: 2px solid red;
   }
