--- a/shoppe/src/components/footer/footer.css
+++ b/shoppe/src/components/footer/footer.css
@@ -9,12 +9,10 @@
   padding: 1rem;
   box-sizing: border-box;
   align-items: center;
-  /* position: fixed;
-  bottom: 0; */
 }
 
 .footer li {
-  font-size: 1.rem;
+  font-size: 1rem;
   margin: 0.2rem;
 }
 
@@ -29,4 +27,20 @@
 .logo {
   height: 8.5rem;
   border-radius: 1rem;
+}
+
+@media (max-width:700px) {
+  .footer {
+    padding: 0.5rem;
+  }
+  .footer li {
+    font-size: 0.8rem;
+    margin: 0.2rem;
+  }
+  .footerRight p {
+    font-size: 1rem;
+  }
+  .logo {
+    height: 7rem;
+  }
 }
